--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-apache-beam
-boto3
-pandas
-fastavro
-psycopg2-binary
+boto3==1.28.65         # Interacción con AWS S3
+pandas==1.5.3          # Manipulación de datos
+psycopg2-binary==2.9.6 # Conexión a PostgreSQL
